--- a/javaproject/.classpath
+++ b/javaproject/.classpath
@@ -6,6 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Dev/javax.mail-api-1.6.2.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/lib/javax.mail-api-1.6.2.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/lib/ojdbc6_g.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
